--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Hello There</h1>
+        <h1>Hello There👋😆</h1>
         <p>it's meee!!!</p>
         <p>eritherium.site</p>
     </div>
