--- a/sandgame/index.html
+++ b/sandgame/index.html
@@ -21,7 +21,7 @@
 
 <canvas id="gameCanvas" width="350" height="350"></canvas>
   <button id="addButton">TAMBAH</button>
-<script src="./scripts/main.js">
+<script src="./main.js">
   
 </script>
 
