--- a/sandgame/index.html
+++ b/sandgame/index.html
@@ -14,6 +14,9 @@
       background-color: black;
       display: block;
       margin: 10px auto;
+      width: 100vw;
+      height: 100vh;
+      image-rendering: pixelated;
     }
   </style>
 </head>
