--- a/sandgame/index.html
+++ b/sandgame/index.html
@@ -15,7 +15,7 @@
       display: block;
       margin: 10px auto;
       width: 100vw;
-      height: 100vh;
+      height: 100vw;
       image-rendering: pixelated;
     }
   </style>
